functionality for task 1

--- a/Task 1/style.css
+++ b/Task 1/style.css
@@ -1,15 +1,15 @@
-#uname{
+#unamesi{
     visibility: hidden;
 }
-#pword{
+#pwordsi{
     visibility: hidden;
-}
-#utype{
-    visibility: hidden
 }
 #signinbutton {
     visibility: visible;
 }
 #signupbutton {
     visibility: visible;
+}
+#logoutbutton {
+    visibility: hidden;
 }
